[package]
name = "swingyships"
version = "0.0.0"
authors = ["zeruslord <zeruslord@gmail.com>"]

[dependencies]
piston = "0.36"
piston_window = "0.77"
piston2d-sprite = "0.43"
find_folder = "0.3"
piston-ai_behavior = "0.22"
gl = "0.10.*"
piston2d-glium_graphics = "0.48"
pistoncore-glutin_window = "0.45"
wrapped2d = "0.4"
uuid = "0.1"
gfx_device_gl = "0.15"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
slotmap = "0.3"

[dependencies.glium]
version = "0.23"
default_features = false

[dependencies.piston2d-graphics]
version = "0.26"
features = ["glyph_cache_rusttype"]
